--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,12 +1,4 @@
-# Production Environment Variables for Medical AI Platform Frontend
-
-# Backend API URL (Render deployment)
+# Production Environment Variables for Vercel Deployment
 REACT_APP_API_URL=https://aihealthcheck-zzqr.onrender.com
-
-# Build configuration
-GENERATE_SOURCEMAP=false
-REACT_APP_NODE_ENV=production
-
-# Performance optimizations
-REACT_APP_ENABLE_ANALYTICS=false
-REACT_APP_ENABLE_LOGGING=false
+REACT_APP_ENVIRONMENT=production
+REACT_APP_VERSION=1.0.0
